# libdfp

./: .gitignore  .travis.yml  CONTRIBUTING  CONTRIBUTORS  COPYING.libdecnumber.txt  COPYING.txt  ChangeLog  ChangeLog.old.md  Makefile.gdb  Makefile.in  NEWS  README  README.developer  README.maintainer  TODO  Versions  Versions.def  bootstrap  config.guess  config.h.in  config.sub  configure  configure.ac  decode.c  dfptypeconv.c  dfptypeconv128.h  dfptypeconv32.h  dfptypeconv64.h  fe_decround.c  fmt_d128.c  fmt_d32.c  fmt_d64.c  generate-changelog.sh  init_dfp.c  install-sh  libdecnumber.pc.in  libdfp-version.c  libdfp.pc.in  make-release.sh  mapround.c  (+10 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
base-math/: Makefile  README  Versions  adddd3.c  addsd3.c  addtd3.c  classify.c  divdd3.c  divsd3.c  divtd3.c  eqdd2.c  eqsd2.c  eqtd2.c  extendddtd2.c  extendddtf.c  extenddfdd.c  extenddftd.c  extendsddd2.c  extendsddf.c  extendsdtd2.c  extendsdtf.c  extendsfdd.c  extendsfsd.c  extendsftd.c  extendtftd.c  fixdddi.c  fixddsi.c  fixddti.c  fixsddi.c  fixsdsi.c  fixsdti.c  fixtddi.c  fixtdsi.c  fixtdti.c  fixunsdddi.c  fixunsddsi.c  fixunsddti.c  fixunssddi.c  fixunssdsi.c  fixunssdti.c  (+57 more)
base-math/ldbl-96/: Implies
base-math/ldbl-ibm128/: extendddtf.c  trunctdtf.c
base-math/ldbl-strings/: extendddtf.c  extendsdtf.c  trunctdtf.c  trunctfdd.c  trunctfsd.c
config/: README  dfp.m4  override.m4  warnings.m4
debian/: changelog  control  copyright  docs  libdfp-dev.install  libdfp1.install  libdfp1.lintian-overrides  libdfp1.symbols  rules  watch
decNumberMath/: Makefile  README  Versions  decNumberMath.c  decNumberMath.h
dfp/: README  decimal  decimal.tmp  dfp.h  fenv.h  float.h  math.h  stdlib.h  wchar.h
dfp/bits/: dfp_dmathcalls.h
dfp/decimal/: decimal
ieee754r/: Makefile  Versions  acosd128.c  acosd32.c  acosd64.c  acoshd128.c  acoshd32.c  acoshd64.c  asind128.c  asind32.c  asind64.c  asinhd128.c  asinhd32.c  asinhd64.c  atan2d128.c  atan2d32.c  atan2d64.c  atand128.c  atand32.c  atand64.c  atanhd128.c  atanhd32.c  atanhd64.c  cbrtd128.c  cbrtd32.c  cbrtd64.c  ceild128.c  ceild32.c  ceild64.c  copysignd128.c  copysignd32.c  copysignd64.c  cosd128.c  cosd32.c  cosd64.c  coshd128.c  coshd32.c  coshd64.c  ddlogtbls.h  decexptables.c  (+201 more)
include/: README  convert.h  decode.h  dfp.h  dfpacc.h  dfpfenv_private.h  dfpmacro.h  dfpstdlib_private.h  dfpwchar_private.h  fmt_dfp.h  get_digits.h  gstdint.h  ieee754r_private.h  init_dfp.h  libdfp-symbols.h  printf_dfp.h  sysdep.h
libbid/: Makefile  README  README.libdfp  _addsub_dd.c  _addsub_sd.c  _addsub_td.c  _dd_to_df.c  _dd_to_di.c  _dd_to_hf.c  _dd_to_sd.c  _dd_to_sf.c  _dd_to_si.c  _dd_to_td.c  _dd_to_tf.c  _dd_to_udi.c  _dd_to_usi.c  _dd_to_xf.c  _df_to_dd.c  _df_to_sd.c  _df_to_td.c  _di_to_dd.c  _di_to_sd.c  _di_to_td.c  _div_dd.c  _div_sd.c  _div_td.c  _eq_dd.c  _eq_sd.c  _eq_td.c  _ge_dd.c  _ge_sd.c  _ge_td.c  _gt_dd.c  _gt_sd.c  _gt_td.c  _hf_to_dd.c  _hf_to_sd.c  _hf_to_td.c  _le_dd.c  _le_sd.c  (+58 more)
libdecnumber/: .gitignore  Makefile  Makefile.in  aclocal.m4  config.in  configure  configure.ac  dconfig.h  decCommonSymbols.h  decContext.h  decContextSymbols.h  decConvert.h  decDPD.h  decDPDSymbols.h  decDebug.h  decDoubleSymbols.h  decNumber.c  decNumber.h  decNumberLocal.h  decNumberSymbols.h  decPackedSymbols.h  decQuadSymbols.h  decSingleSymbols.h  decUInt128.h  decimal128.h  decimal32.h  decimal64.h  mini-gmp.c  mini-gmp.h
libdecnumber/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.3t  traces.4
libdecnumber/bid/: Makefile  bid-coeffbits.h  decimal128.c  decimal128.h  decimal32.c  decimal32.h  decimal64.c  decimal64.h
libdecnumber/dpd/: decimal128.c  decimal128.h  decimal128Symbols.h  decimal32.c  decimal32.h  decimal32Symbols.h  decimal64.c  decimal64Symbols.h
printf-hooks/: Makefile  fmt_d128.c  fmt_d32.c  fmt_d64.c  init_dfp.c  printf_dfp.c
scripts/: README  build_all.sh  check-localplt.awk  compile  config.guess  depcomp  localplt.awk  missing  update-copyrights
stdlib/: Makefile  strfromd128.c  strfromd32.c  strfromd64.c  strtod128.c  strtod32.c  strtod64.c  wcstod128.c  wcstod32.c  wcstod64.c
sysdeps/aarch64/: Implies  Versions  libdfp.abilist
sysdeps/bid/: Implies  Makefile  Versions  bid-private.c  bid-private.h  bid-uint128.h  decode.c  fmodd32.c  libdfp-no-ti.abilist  libdfp.abilist  mini-gmp.c  symbol-hacks.h
sysdeps/dpd/: Implies  Makefile  Versions  binpowof10.c  decimal_float128.c  decode.c  decpowof2.c  dpd-private.c  dpd-private.h  fixtdti.c  fixunstdti.c  symbol-hacks.h  tidpdcommon.h
sysdeps/generic/: Makefile  binpowof10.c  convert_helpers.h  decpowof2.c  dfp_inline.h  dfptypeconv128.h  dfptypeconv32.h  fenv_libdfp.h  libdfp-test-ulps  libdfp-version.c  localplt.data  mapround.c  mapround.h  math_private.h  numdigits.h  symbol-hacks.h  ticonstants.c
sysdeps/i386/: Implies  libdfp-no-ti.abilist  libdfp.abilist
sysdeps/powerpc/: Implies  extendddtf.c  extendsdtf.c  extendtftd.c  fenv_libdfp.h  symbol-hacks.h  sysdep.h  trunctdtf.c  trunctfdd.c  trunctfsd.c
sysdeps/s390/: Implies  Versions  fenv_libdfp.h  localplt.data
sysdeps/soft-dfp/: Makefile  README  Versions  adddd3.c  addsd3.c  addtd3.c  candtruncd32.c  candtruncd64.c  convert_helpers.h  decroundtls.c  decroundtls.h  divdd3.c  divsd3.c  divtd3.c  eqdd2.c  eqsd2.c  eqtd2.c  extendddtd2.c  extendsddd2.c  extendsddf.c  extendsdtd2.c  extendsdtf.c  (+60 more)
tests/: Makefile  Makefile.autotest  README  TODO  acos.input  auto-dfp-test-in  ceil.input  copysign.input  cos.input  debug-test.sh  decode.h  exp.input  exp2.input  fabs.input  fdim.input  floor.input  fmax.input  fmaxmag.input  fmin.input  fminmag.input  fmod.input  fpclassify.input  gdb_start_address.py  gen-auto-dfp-tests.c  gen-libdfp-tests.py  gen-libdfp-ulps.py  ilogb.input  isfinite.input  isgreater.input  isgreaterequal.input  isinf.input  isless.input  islessequal.input  islessgreater.input  isnan.input  isnan_internal.input  isnormal.input  issignaling.input  isunordered.input  ldexp.input  (+73 more)
(+451 files in other folders)
